--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<meta http-equiv="refresh" content="0; url='sunniestar.github.io/Clicker-Game/game/index.html'>
+<meta http-equiv="refresh" content="0; url='sunniestar.github.io/Clicker-Game/game/index.html'/>
 <script>
 open('sunniestar.github.io/Clicker-Game/game)
   </script>
