--- a/index.html
+++ b/index.html
@@ -1,4 +1,1 @@
-<meta http-equiv="refresh" content="0; url='sunniestar.github.io/Clicker-Game/game/index.html'/>
-<script>
-open('sunniestar.github.io/Clicker-Game/game)
-  </script>
+<meta http-equiv="refresh" content="0; url=sunniestar.github.io/Clicker-Game/game/index.html">
