--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://sunniestar.github.io/Clicker-Game/game/index.html">
+<meta http-equiv="refresh" content="0; url=./game/index.html">
