--- a/game/index.html
+++ b/game/index.html
@@ -1,4 +1,5 @@
 <html>
+<title>definitly NOT a GAME</title>
 <script src="https://cdn.jsdelivr.net/npm/break_infinity.js@2/dist/break_infinity.js"></script>
 <script src="clicker.txt" type="text/javascript"></script>
 
