--- a/game/index.html
+++ b/game/index.html
@@ -3,7 +3,7 @@
 <script src="https://cdn.jsdelivr.net/npm/break_infinity.js@2/dist/break_infinity.js"></script>
 <script src="https://raw.githubusercontent.com/Sunniestar/Clicker-Game/main/game/clicker.js" type="text/javascript"></script>
 
-<body onload=init()>
+<body>
 <div>hello</div>
 <div>buy more clicks a click</div>
 <div>export save</div>
