--- a/game/index.html
+++ b/game/index.html
@@ -1,7 +1,7 @@
 <html>
 <title>definitly NOT a GAME</title>
 <script src="https://cdn.jsdelivr.net/npm/break_infinity.js@2/dist/break_infinity.js"></script>
-<script src="https://raw.githubusercontent.com/Sunniestar/Clicker-Game/main/game/clicker.js"></script>
+<script src="/clicker.js"></script>
 
 <body>
 <div>hello</div>
